# Enderfall-Hub

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
scripts/: rename-exe.cjs  rename-msi.cjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: auth.tsx  supabase.ts
