[package]
name = "enderfall-app-browser"
version = "0.1.0"
description = "Enderfall App Browser"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-remove-file", "fs-read-file", "fs-create-dir", "fs-write-file", "http-all", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
msi-extract = "0.2.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
