[package]
name = "enderfall-app-browser"
version = "0.1.0"
description = "Enderfall App Browser"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "path-all", "fs-remove-file", "fs-read-file", "fs-create-dir", "fs-write-file", "http-all", "dialog-open", "shell-open", "icon-ico" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
msi-extract = "0.2.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", package = "tauri-plugin-single-instance" }

[features]
default = ["system-tray", "custom-protocol"]
system-tray = []
custom-protocol = ["tauri/custom-protocol"]
